# KuratorMindAI

./: .coderabbit.yaml  .gitignore  .pyre_configuration  04-UAT.md  CLAUDE.md  KuratorMind_100_Real_Leads.csv  KuratorMind_100_Verified_Leads.csv  KuratorMind_Potential_Clients.csv  package-lock.json  package.json
.agent/: settings.json
.claude/: settings.json
apps/agents/: .dockerignore  .pyre_configuration  04-UAT.md  Dockerfile  pyproject.toml  pyrightconfig.json  sritex_test_scenario.md  uat_script.py  uat_state.json  update_sidebar.py
apps/agents/kuratormind/: config.py
apps/agents/kuratormind/agents/claim_auditor/: agent.py
apps/agents/kuratormind/agents/forensic_accountant/: agent.py
apps/agents/kuratormind/agents/ingestor/: agent.py
apps/agents/kuratormind/agents/orchestrator/: agent.py
apps/agents/kuratormind/agents/output_architect/: agent.py
apps/agents/kuratormind/agents/regulatory_scholar/: agent.py
apps/agents/kuratormind/api/: deps.py  limiter.py  main.py
apps/agents/kuratormind/api/routes/: audit.py  cases.py  chat.py  claims.py  documents.py  search.py  vaults.py
apps/agents/kuratormind/scripts/: verify_cross_vault.py
apps/agents/kuratormind/services/: accounting.py  compliance.py  ingestion.py  reporting.py  security.py
apps/agents/kuratormind/tools/: financial_tools.py  supabase_tools.py
apps/agents/tests/: conftest.py  test_api_layer.py  test_audit_logic.py  test_benford.py  test_compliance.py  test_entity_resolution.py  test_ingestion_pipeline.py  test_reasoning_quality.py  test_security_config.py
apps/web/: .dockerignore  (+8 more)
(+267 files in other folders)
